<resources xmlns:tools="http://schemas.android.com/tools">
    <!--
 * Copyright (C) 2018 Madonah Syombua
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *-->
    <string name="app_name">Popular Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error">Error</string>
    <string name="sort_pop">Popular Movies</string>
    <string name="todo">TODO</string>
    <string name="brief">After the death of his father, T\\\'Challa returns home to the African nation of Wakanda to take his rightful place as king. When a powerful enemy suddenly reappears, T\'Challa\'s mettle as king — and as Black Panther — gets tested when he's drawn into a conflict that puts the fate of Wakanda </string>
    <string name="vote_average">4.0 / 5.0</string>
    <string name="released">February 16, 2018</string>
    <string name="title">Black Panther</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="favorite">Favourite</string>
    <string name="reviews">Reviews</string>
    <string name="name">Name</string>
    <string name="text">This was the best mover in 2018</string>
    <string name="menu">Menu</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="saved_sort_by_key">sort_by</string>
    <string name="no_favourite_movies_message">No Saved Favorite, Please Save some.</string>
    <string name="error_message">Movie data is not available</string>
    <string name="runtime">154min</string>
    <string name="share">Share</string>
    <string name="share_trailer">Share Trailer</string>
    <string name="removed_from_favourite">Removed from Favorite</string>
    <string name="added_to_favourite">Movie Added to Favorite</string>
    <string name="fail">Failed to asynchronously load data.</string>

</resources>
